--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ecommerce backend code with nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.10.1",
@@ -14,7 +15,15 @@
     "express": "^4.10.7",
     "moment": "^2.9.0",
     "nodemon": "^1.2.1"
-},
+  },
   "author": "omkar",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pranav3333/SDM-practice.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pranav3333/SDM-practice/issues"
+  },
+  "homepage": "https://github.com/pranav3333/SDM-practice#readme"
 }
